--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,23 @@
 
  /* Experience styles */
  .experience-item {
-     margin-bottom: 30px;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 1.5rem;
+    margin-bottom: 30px;
+    flex: 1 1 calc(50% - 1.5rem);
+    max-width: 500px;
+    box-sizing: border-box;
+    border: 2px solid #293A4A;
+ }
+
+ .experience-container {
+     display: flex;
+     flex-wrap: wrap;
+     gap: 1.5rem;
+     justify-content: center;
+     /* Center the items horizontally */
  }
 
  .experience-item h3 {
@@ -88,6 +104,7 @@
 
  .experience-item p {
      margin-bottom: 10px;
+    text-align: justify;
  }
 
  /* Certifications styles */
@@ -137,6 +154,7 @@
      border-radius: 5px solid #808080;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
      padding: 20px;
+    border: 2px solid #293A4A;
  }
 
  .project-item h3 {
