--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@
      background-color: #2c3e50;
      text-align: center;
      background-image: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
-     height: 30vh;
+     height: 40vh;
  }
 
  header h1 {
@@ -64,7 +64,7 @@
  }
 
  header p {
-     font-size: 1.2em;
+     font-size: 1.0em;
  }
 
  /* Section styles */
@@ -78,6 +78,13 @@
  }
 
  /* Experience styles */
+ .experience {
+     display: grid;
+     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+     gap: 0.5rem;
+     justify-content: center;
+ }
+
  .experience-item {
     background: #fff;
     border-radius: 8px;
@@ -88,14 +95,6 @@
     max-width: 500px;
     box-sizing: border-box;
     border: 2px solid #293A4A;
- }
-
- .experience-container {
-     display: flex;
-     flex-wrap: wrap;
-     gap: 1.5rem;
-     justify-content: center;
-     /* Center the items horizontally */
  }
 
  .experience-item h3 {
@@ -307,6 +306,14 @@
  @media (max-width: 768px) {
      header h1 {
          font-size: 2em;
+     }
+
+     header p{
+        font-size: 0.8em;
+     }
+
+     header {
+        height: 55vh;
      }
 
      .certification-item {
