--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,13 @@
  /* About Section */
  .text-box {
      color: #fff;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
  }
 
  .text-box .head1 {
      line-height: 160px;
-     margin-left: -3px;
      color: transparent;
      -webkit-text-stroke: 2px #fff;
      background: url("./images/back.png");
@@ -56,7 +58,7 @@
      background-color: #2c3e50;
      text-align: center;
      background-image: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
-     height: 40vh;
+     height: 35vh;
  }
 
  header h1 {
@@ -65,6 +67,9 @@
 
  header p {
      font-size: 1.0em;
+     margin-top: -20px;
+     margin-bottom: 0;
+     line-height: 1.5em;
  }
 
  /* Section styles */
@@ -86,15 +91,15 @@
  }
 
  .experience-item {
-    background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 1.5rem;
-    margin-bottom: 30px;
-    flex: 1 1 calc(50% - 1.5rem);
-    max-width: 500px;
-    box-sizing: border-box;
-    border: 2px solid #293A4A;
+     background: #fff;
+     border-radius: 8px;
+     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+     padding: 1.5rem;
+     margin-bottom: 30px;
+     flex: 1 1 calc(50% - 1.5rem);
+     max-width: 500px;
+     box-sizing: border-box;
+     border: 2px solid #293A4A;
  }
 
  .experience-item h3 {
@@ -103,7 +108,7 @@
 
  .experience-item p {
      margin-bottom: 10px;
-    text-align: justify;
+     text-align: justify;
  }
 
  /* Certifications styles */
@@ -130,15 +135,15 @@
      margin-bottom: 10px;
  }
 
- .certification-link-img{
-    vertical-align: middle;
+ .certification-link-img {
+     vertical-align: middle;
  }
 
- .leetcode-card{
-    margin-bottom: 10px;
-    display: block;
-    width: 100%;
-    height: auto;
+ .leetcode-card {
+     margin-bottom: 10px;
+     display: block;
+     width: 100%;
+     height: auto;
  }
 
  /* Projects styles */
@@ -153,7 +158,7 @@
      border-radius: 5px solid #808080;
      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
      padding: 20px;
-    border: 2px solid #293A4A;
+     border: 2px solid #293A4A;
  }
 
  .project-item h3 {
@@ -169,7 +174,7 @@
 
  .project-item p {
      padding-bottom: 5px;
-    text-align: justify;
+     text-align: justify;
  }
 
  /* Skills styles */
@@ -308,12 +313,8 @@
          font-size: 2em;
      }
 
-     header p{
-        font-size: 0.8em;
-     }
-
      header {
-        height: 55vh;
+         height: 55vh;
      }
 
      .certification-item {
