--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,8 @@
      background-color: #2c3e50;
      text-align: center;
      background-image: linear-gradient(rgba(0, 0, 0, 0.3), transparent);
-     height: 35vh;
+     height: auto;
+     padding-bottom: 20px;
  }
 
  header h1 {
@@ -317,10 +318,6 @@
     header p {
         font-size: 0.8em;
     }
-
-     header {
-         height: 60vh;
-     }
 
      .certification-item {
          flex-basis: calc(50% - 40px);
